<?xml version="1.0" encoding="utf-8"?>
<!-- smartling.instruction_attributes = comment -->
<!-- smartling.placeholder_format_custom = \{[a-zA-Z0-9_-]+\}-->
<resources>
    <!-- Accessibility and tooltip labels for icons -->
    <string name="ic_overflow">More&#8230;</string>
    <string name="ic_up">Go Back</string>
    <string name="ic_archive" comment="Label for a button that archives an item. This is a verb.">Archive</string>
    <string name="ic_save">Save</string>
    <string name="ic_saved">Saved</string>
    <string name="ic_readd">Re-Add</string>
    <string name="ic_favorite">Favorite</string>
    <string name="ic_unfavorite">Unfavorite</string>
    <string name="ic_mark_as_viewed">Mark as Viewed</string>
    <string name="ic_mark_as_not_viewed">Mark as Not Viewed</string>
    <string name="ic_share">Share</string>
    <string name="ic_delete">Delete</string>
    <string name="ic_add_tags">Add Tags</string>
    <string name="ic_filters">Filters</string>
    <string name="ic_play">Play</string>
    <string name="ic_pause">Pause</string>
    <string name="ic_skip">Skip forward</string>
    <string name="ic_back">Skip back</string>
    <string name="ic_cancel">Cancel</string>
    <string name="ic_listen">Listen</string>
    <string name="ic_like">Like</string>
    <string name="ic_remove_like">Remove Like</string>
    <string name="ic_repost">Repost</string>
    <string name="ic_remove_repost">Remove Repost</string>
    <string name="ic_plus">+</string>
    <string name="ic_minus">-</string>
    <string name="ic_close">Close</string>
    <string name="ic_edit">Edit</string>
    <string name="ic_highlight" comment="Label for button that highlights selected text">Highlight</string>
    <string name="ic_copy">Copy</string>
    <string name="ic_brightness_down">Decrease Screen Brightness</string>
    <string name="ic_brightness_up">Increase Screen Brightness</string>
    <string name="ic_brightness_control">Screen Brightness</string>
    <string name="ic_settings">Settings</string>
    <string name="ic_premium">Pocket Premium</string>
    <string name="ic_pocket_menu">Pocket Menu</string>

    <string name="ac_save">Save</string>
    <string name="ac_save_to_pocket">Save to Pocket</string>
    <string name="ac_previous">Previous</string>
    <string name="ac_next">Next</string>
    
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_upsell">Unlock more customization options</string>
    <string name="get_premium">Get Premium</string>
    
    <string name="counts_thousands" comment="number abbreviated to thousands. such as 1k for 1,000. as short as possible.">%dk</string>
    <string name="counts_millions" comment="number abbreviated to millions. such as 1m for 1,000,000. as short as possible">%dm</string>
    
    <!-- content descriptions -->
    <string name="setting_incrementor" comment="{setting} is a placeholder for a text style setting, eg Text Size, Line Height, or Margin, do not translate the content within {}">Increase {setting}</string>
    <string name="setting_decrementor" comment="{setting} is a placeholder for a text style setting, eg Text Size, Line Height, or Margin, do not translate the content within {}">Decrease {setting}</string>
    <string name="text_setting_text_size">Text Size</string>
    <string name="text_setting_line_height">Line Height</string>
    <string name="text_setting_margin">Margin</string>

    <string name="current_typeface" comment="{typeface} is a placeholder for the current text typeface setting, eg Blanco, Graphik, do not translate the content within {}">Change typeface from {typeface}</string>

    <string name="theme_toggle_light_desc">Change to light theme</string>
    <string name="theme_toggle_dark_desc">Change to dark theme</string>
    <string name="theme_toggle_auto_desc">Change theme automatically</string>

    <!-- Strings only used for ux playground-->
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>
